--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
                     <div class="container">
                         <h1 class="banner_taital">这是我的个人博客</h1>
                         <p class="banner_text">在其中你可以看到我的一些作品、日志</p>
-                        <div class="read_bt"><a href="#">Get A Quote</a></div>
+                        <div class="read_bt"><a href="/services.html">去看看</a></div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="container">
                         <h1 class="banner_taital">这也有我的收藏</h1>
                         <p class="banner_text">我的收藏涵盖了各大种类，有的是编程资料，有的是游戏，有的是有趣的程序……</p>
-                        <div class="read_bt"><a href="#">Get A Quote</a></div>
+                            <div class="read_bt"><a href="/not_found.html">去看看</a></div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="container">
                         <h1 class="banner_taital">你也可以评论我的帖子</h1>
                         <p class="banner_text">既可以是指出我程序的问题，也可以是闲聊，还可以是你改进的建议</p>
-                        <div class="read_bt"><a href="#">Get A Quote</a></div>
+                        <div class="read_bt"><a href="/services.html">去博客</a></div>
                     </div>
                 </div>
             </div>
