--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li class="active"><a href="index.html">主页</a></li>
                     <li><a href="services.html">我的博客</a></li>
-                    <li><a href="blog.html">我的一些收藏</a></li>
+                    <li><a href="not_found.html">我的一些收藏</a></li>
                     <li><a href="about.html">关于我</a></li>
                     <!--<li><a href="contact.html">Contact us</a></li>-->
                 </ul>
@@ -62,7 +62,7 @@
                     <div class="container">
                         <h1 class="banner_taital">这是我的个人博客</h1>
                         <p class="banner_text">在其中你可以看到我的一些作品、日志</p>
-                        <div class="read_bt"><a href="/services.html">去看看</a></div>
+                        <div class="read_bt"><a href="services.html">去看看</a></div>
                     </div>
                 </div>
                 <div class="carousel-item">
